fix font overflow issue

--- a/src/styles/pages/endsars.scss
+++ b/src/styles/pages/endsars.scss
@@ -74,7 +74,7 @@
         }
 
         @include media("<=400px") {
-            font-size: 1.4em;
+            font-size: 1.3em;
         }
     }
 
